<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/txtInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account_lower"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="4dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/txtUsernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username">

    </EditText>

    <EditText
        android:id="@+id/txtEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp">

    </EditText>

    <EditText
        android:id="@+id/txtPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="20dp">
    </EditText>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp">
    </Button>

    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Button2"
        android:text="@string/login_with_your_account"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp">
    </Button>

</LinearLayout>




</RelativeLayout>